montaje de musofobia epub

--- a/epub/musofobia.explode/index_split_012.xhtml
+++ b/epub/musofobia.explode/index_split_012.xhtml
@@ -18,35 +18,57 @@
 <p class="P-HNormalTimes20Car"><span class="S-T">sextidi, ex.nidito.de.amor (6/floreal/CCXIII/13:50) </span>Hoy a las 16:30 ingreso al hospital para una operación de tabique nasal. Voy a pasar ahí cuatro días. Antes de irme, llamo a la traductora E para un último café y al entrar al bar Delyss pienso: necesito bautizar este lugar con alguna denominación mitológica, y miro a la izquierda: mar de andenes de la estación.del.este. Miro a la derecha: colisión del foburgo.san.denis y la estación.del.norte. <span class="S-T1">Ego baptiso te</span> Bar Desliz, tierra de nadie entre las vías, puerto de trenes que no van a ningún lado. / La encuentro tomando vino tinto con el dramaturgo R, el comerciante J y una estudiante turca. El comerciante y el dramaturgo dibujan en una servilleta un grafo que representa el comercio carnal entre los habituales del Desliz. De reojo, observo que estoy conectado al grafo por uno de los nodos más concurridos. El dramaturgo R propone colorear los arcos del grafo: azul significa sexo como Dios manda, rojo significa sodomía. Yo intento preguntar quién es partidario de la sodomía en esta mesa, pero una preposición me traiciona y en francés mi pregunta suena a ¿quién quiere sodomía sobre esta mesa? Desde la barra, dos clientes levantan la mano. Por ahí debí haber empezado: por operarme las preposiciones. / ¿Y si la anestesia general se trasviste en guillotina y nunca vuelvo a ver los puntos roji.blancos e íntimos, de la traductora E? </p>
 <p class="P-HNormalTimes20Car"><span class="S-T">sextidi, piedad.salitrería </span><span class="S-T">(6/floreal/CCXIII/</span><span class="S-T">19:00) </span><span class="S-T2">Estoy en el hospital. </span>En la sala de espera hay una jovencita muy guapa picándose la nariz. La observo. Disimula el dedo. Poco después, un hombre entra a la sala, se sienta a su lado y se dirige a ella con familiaridad paterna. Una enfermera los llama a ellos, y justo después me llama a mí. Me pide mi número de seguro social. Para el seguro social francés, yo soy dependiente de excoamante y esta dependencia ha causado una confusión: las secretarias del hospital ya me han cambiado de identidad y sexo, me han registrado bajo el nombre de ex.coamante y me han reservado una cama en habitación femenina, precisamente junto a la jovencita. Yo le aclaro a la secretaria que por mí no hay problema, yo no tengo prejuicios contra las jovencitas que se pican la nariz, yo mismo me la he picado desde niño. El problema no es para usted, es para la señorita. Un cuarto de hora después, he recuperado mi nombre y me han asignado una cama en el segundo piso, cuarto 28, masculino. Es un cuarto doble y pelón, sin teléfono ni televisión porque los electrodomésticos se pagan aparte y porque cuando se exilió al fondo del pozo Toru Okada tampoco tenía televisión. / Tomo posesión de los lugares. Hago un balance de lo que tengo y lo que me hace falta:</p>
 <p class="P-HNormalTimes20Car"></p>
-<div class="T-Tableau"><div class="TC-Tableau1A"></div>
-<div class="TC-Tableau1B"></div>
-<div class="calibre3"><div class="TD-Tableau1A"><p class="P-P31">TENGO</p>
+<div align="center">
+<table border="0">
+<tr>
+
+<td>
+<div align="center">
+TENGO
 </div>
-<div class="TD-Tableau1B"><p class="P-P31">NO TENGO</p>
-</div>
-</div>
-<div class="calibre3"><div class="TD-Tableau1A1"><p class="P-P31">libros [Balzac, Coetzee]</p>
-<p class="P-P31">curso de chino</p>
-<p class="P-P31">papel, pluma, diario</p>
-<p class="P-P31">cepillo de dientes</p>
-<p class="P-P31">pijama</p>
-<p class="P-P31">tapones para los oídos</p>
-<p class="P-P31"> copias de </p>
-<p class="P-P31"><span class="S-T9">Pocapena </span>y </p>
-<p class="P-P32">  Virgen del estereograma </p>
-<p class="P-P31"></p>
-</div>
-<div class="TD-Tableau1B1"><p class="P-P31">pasta de dientes</p>
-<p class="P-P31">radio</p>
-<p class="P-P31">jabón</p>
-<p class="P-P31">toalla</p>
-<p class="P-P31">pantuflas</p>
-<p class="P-P31">el periódico de mañana</p>
-<p class="P-P31">el día de mañana</p>
-<p class="P-P31">una copia de </p>
-<p class="P-P32">La virgen del Volkswagen</p>
-</div>
-</div>
+</td>
+<td>NO TENGO</td>
+</td></tr>
+<tr>
+<td>libros [Balzac, Coetzee]</td>
+<td>pasta de dientes</td>
+</tr>
+<tr>
+<td>curso de chino</td>
+<td>radio</td>
+</tr>
+<tr>
+<td>papel, pluma, diario</td>
+<td>jabón</td>
+</tr>
+<tr><td>
+cepillo de dientes
+</td>
+<td>toalla</td>
+</tr>
+<tr><td>
+pijama
+</td>
+<td>pantuflas</td>
+</tr>
+<tr><td>
+tapones para los oídos
+</td>
+<td>el periódico de mañana</td>
+</tr>
+<tr>
+<td> borradores de </td>
+<td>el día de mañana</td>
+</tr>
+<tr>
+<td><span class="S-T9">Pocapena </span>y </td>
+<td>borrador de </td>
+</tr>
+<tr>
+<td>Virgen del estereograma </td>
+<td>La virgen del Volkswagen</td>
+</tr>
+</table>
 </div>
 <p class="P-HNormalTimes20Car"></p>
 <p class="P-HNormalTimes20Car"> Para matar el tiempo, me pongo a escribir cartas a mano, como en el siglo XIX. Una para mis padres en México, donde les explico que esos nietos que tanto ansiaban quedan en veremos hasta nuevo aviso, y otra para los padres de ex.coamante en donde les doy las gracias por todo. Luego me duermo. Mal. </p>
