--- a/epub/musofobia.explode/index_split_000.xhtml
+++ b/epub/musofobia.explode/index_split_000.xhtml
@@ -7,73 +7,48 @@
 <link href="page_styles.css" type="text/css" rel="stylesheet"/>
 </head>
   <body class="calibre">
-<p class="P-P"></p>
-<p class="P-P1"></p>
-<p class="P-P1"></p>
-<p class="P-P1"></p>
-<p class="P-P1"></p>
-<p class="P-P1"></p>
-<p class="P-P1"></p>
-<p class="P-P1"></p>
-<p class="P-P1"></p>
-<p class="P-P1"></p>
-<p class="P-P1"></p>
-<p class="P-P1"></p>
-<p class="P-P1"></p>
-<p class="P-P1"></p>
-<p class="P-P1"></p>
-<p class="P-P1"></p>
-<p class="P-P1"></p>
-<p class="P-P1"></p>
+<p class="P-P8"></p>
+ <p class="P-P8"></p>
+ <p class="P-P8"></p>
+<p class="P-P8"></p> 
 <p class="P-P2">muso.fobia</p>
 <p class="P-P3">versión 2.0 &lt;open source&gt;</p>
-<p class="P-P4"></p>
-<p class="P-P4"></p>
-<p class="P-P5"></p>
+<p class="P-P8"></p>
+<p class="P-P8"></p>
+<p class="P-P8"></p>
+<p class="P-P8"></p>
 <p class="P-P5">jorge.harmodio</p>
+<p class="P-P8"></p>
 <p class="P-P6"></p>
-<p class="P-P7"></p>
 <p class="P-P8"></p>
 <p class="P-P8"></p>
+<p class="P-P8">Copyright 2008, Jorge Harmodio<br/>
+Copyleft 2013, Jorge Harmodio</p>
 <p class="P-P8"></p>
-<p class="P-P8"></p>
-<p class="P-P8"></p>
-<p class="P-P8"></p>
-<p class="P-P8"></p>
-<p class="P-P8"></p>
-<p class="P-P8"></p>
-<p class="P-P8"></p>
-<p class="P-P8"></p>
-<p class="P-P8"></p>
-<p class="P-P8"></p>
-<p class="P-P8"></p>
-<p class="P-P8"></p>
-<p class="P-P8"></p>
-<p class="P-P8"></p>
-<p class="P-P8"></p>
-<p class="P-P8"></p>
-<p class="P-P8"></p>
-<p class="P-P8"></p>
-<p class="P-P8"></p>
-<p class="P-P8"></p>
-<p class="P-P8">muso.fobia versión 2.0 &lt;open source&gt;</p>
-<p class="P-P8"></p>
-<p class="P-P8"></p>
-<p class="P-P8"></p>
-<p class="P-P8"></p>
-<p class="P-P8"></p>
-<p class="P-P8">Primera edición :: Random House – Mondadori (México D.F., 2008)</p>
-<p class="P-P8">Segunda edición :: malversando.com (París, 2013)</p>
+<p class="P-P8">Primera edición :: Random House – Mondadori (México D.F., 2008)<br/>
+Segunda edición :: malversando.com (París, 2013)</p>
 <p class="P-P9"></p>
-<p class="P-P9">Por este acto renuncio a todos los derechos de autor y derechos conexos o afines con respecto a esta obra, junto con todas las reclamaciones y las causas de acción asociadas, en la medida que lo permita la ley.</p>
-<p class="P-P10"></p>
-<div class="P-P11"><div class="G-fr"><img src="Pictures/10000200000000580000001FC088875E.png" alt="" class="calibre1"/>
-</div>
-</div>
+<p class="P-P9" xmlns:dct="http://purl.org/dc/terms/" xmlns:vcard="http://www.w3.org/2001/vcard-rdf/3.0#">
+  <a rel="license"
+     href="http://creativecommons.org/publicdomain/zero/1.0/">
+     <div align="center">
+    <img src="http://i.creativecommons.org/p/zero/1.0/88x31.png" style="border-style: none; " alt="CC0" />
+    </div>
+  </a>
+  <br />
+  To the extent possible under law,
+  <a rel="dct:publisher" href="http://www.malversando.com">
+    <span property="dct:title">Jorge Harmodio</span></a>
+  has waived all copyright and related or neighboring rights to
+  <span property="dct:title">muso.fobia versión 2.0 "open source"</span>.
+This work is published from:
+<span property="vcard:Country" datatype="dct:ISO3166"
+      content="FR" about="www.malversando.com">
+  France</span>.
+</p>
 <p class="P-P8"></p>
-<p class="P-P12">El lector es libre de copiar, alterar y comercializar esta obra, pues pertenece al dominio público. </p>
-<p class="P-P7"></p>
-<p class="P-P13">www.malversando.com</p>
+<p class="P-P12">Usted es libre de copiar, distribuir, remezclar, transformar y hacer uso comercial de esta obra siempre y cuando cite el nombre del autor. </p>
+<p class="P-P38"><a href="http://www.malversando.com">www.malversando.com</a></p>
 <p class="P-P7"></p>
 </body>
 </html>
