--- a/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_003bis.xhtml
+++ b/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_003bis.xhtml
@@ -7,7 +7,7 @@
 <link href="page_styles.css" type="text/css" rel="stylesheet"/>
 </head>
   <body class="calibre">
-<p class="calibre1">Fractura Doble</p>
+<h1 class="calibre1">Fractura Doble</h1>
 <p class="calibre2">Presenté a Nadia en el taller y los ojos de todos cayeron como zopilotes sobre su cuerpo, aún a pesar de las muletas, aún a pesar del yeso. Alguien leyó un texto pero casi no lo criticaron, concentrados como estaban en la imaginaria labor de desnudarla. A mí la urgencia me venció y tuve que salir al baño. Cuando regresé ya revoloteaban en torno a ella mojando sus plumas ávidas en el tintero. </p>
 <p class="calibre2">―No te agobies, nada más le vamos a firmar la férula.</p>
 <p class="calibre2">Pero nunca falta el inspirado que se deja llevar por el lirismo. Ni el otro imbécil, el de la ocurrencia.</p>
