--- a/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_007.xhtml
+++ b/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_007.xhtml
@@ -9,12 +9,12 @@
 <body>
 <p class="P-P24"></p>
 <p class="P-P24"></p>
-<div class="P-P25"><div class="G-fr3"><img src="Pictures/1000000000000280000001E0DEF1E005petite.png" alt="" class="calibre4"/>
+<div class="P-P25"><div class="G-fr3"><img src="Images/1000000000000280000001E0DEF1E005petite.png" alt="" class="calibre4"/>
 </div>
 </div>
 <p class="P-P26"></p>
 <p class="P-P26"></p>
 <p class="P-P26"></p>
-<p class="P-P26">Nos reuníamos una vez al mes, para escribir un cuento. Antes de iniciar la escritura, cenábamos lo que el anfitrión de turno nos hubiera preparado. Esa noche la reunión fue en casa de Alberto. Me pidió que le ayudara a cocinar. En su alacena, entre el comino y el aceite de girasol, encontré varios topers de plástico con figuras retóricas. Yo se lo advertí mientras cocinábamos: cuatro cucharadas de epanáforas son muchas para un solo pollo, la sopa va a quedar picosa de tanta sinestesia, además, la hipérbole y la pera no se llevan. No estés chingando y trabaja, que este menú es para escritores. Los comensales llegaron puntuales y degustaron con beneplácito lo que habíamos preparado. Después del postre, las frases aparecieron poco a poco en el cuerpo de los comensales. Alberto pidió que nadie se alarmara; explicó que la aparición de las frases era el resultado natural del proceso digestivo. No es que las frases aparecieran tal cual, escritas sobre la ropa, sino que, al fijar cierta parte del cuerpo del comensal, por ejemplo, la espalda de Nadia, uno <span class="S-T1">podía leerla</span>. Alberto nos pidió que pasáramos a la sala y que, de dos en dos, nos leyéramos en voz alta para ir juntando las frases. El cuento nos quedó bueno.</p>
+<p class="P-P26">Nos reuníamos una vez al mes, para escribir un cuento. Antes de iniciar la escritura, cenábamos lo que el anfitrión de turno nos hubiera preparado. Esa noche la reunión fue en casa de Alberto. Me pidió que le ayudara a cocinar. En su alacena, entre el comino y el aceite de girasol, encontré varios topers de plástico con figuras retóricas. Yo se lo advertí mientras cocinábamos: cuatro cucharadas de epanáforas son muchas para un solo pollo, la sopa va a quedar picosa de tanta sinestesia, además, la hipérbole y la pera no se llevan. No estés chingando y trabaja, que este menú es para escritores. Los comensales llegaron puntuales y degustaron con beneplácito lo que habíamos preparado. Después del postre, las frases aparecieron poco a poco en el cuerpo de los comensales. Alberto pidió que nadie se alarmara; explicó que la aparición de las frases era el resultado natural del proceso digestivo. No es que las frases aparecieran tal cual, escritas sobre la ropa, sino que, al fijar cierta parte del cuerpo del comensal, por ejemplo, la espalda de Nadia, uno <i>podía leerla</span>. Alberto nos pidió que pasáramos a la sala y que, de dos en dos, nos leyéramos en voz alta para ir juntando las frases. El cuento nos quedó bueno.</p>
 </body>
 </html>
