--- a/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_010.xhtml
+++ b/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_010.xhtml
@@ -9,18 +9,18 @@
 <body>
 <p class="P-P27"></p>
 <p class="P-P28">                                                                                                          </p>
-<p class="P-HNormalTimes20Car"></p>
-<p class="P-HNormalTimes20Car"></p>
-<p class="P-HNormalTimes20Car"></p>
-<p class="P-HNormalTimes20Car"></p>
-<p class="P-HNormalTimes20Car"></p>
-<p class="P-HNormalTimes20Car"></p>
-<p class="P-HNormalTimes20Car"></p>
-<p class="P-HNormalTimes20Car"></p>
-<p class="P-HNormalTimes20Car"></p>
-<p class="P-HNormalTimes20Car"></p>
-<p class="P-HNormalTimes20Car"></p>
-<p class="P-HNormalTimes20Car"></p>
-<p class="P-HNormalTimes20Car"><span class="S-T">sin.lugar, sin.fecha: </span><span class="S-T2">Hoy no puedo escribir ni dormir ni comer ni salir. Hoy sólo puedo llorar como cuento lo que no supe defender como novela. </span></p>
+<p class="calibre2"></p>
+<p class="calibre2"></p>
+<p class="calibre2"></p>
+<p class="calibre2"></p>
+<p class="calibre2"></p>
+<p class="calibre2"></p>
+<p class="calibre2"></p>
+<p class="calibre2"></p>
+<p class="calibre2"></p>
+<p class="calibre2"></p>
+<p class="calibre2"></p>
+<p class="calibre2"></p>
+<p class="calibre2"><b>sin.lugar, sin.fecha: </span><i>Hoy no puedo escribir ni dormir ni comer ni salir. Hoy sólo puedo llorar como cuento lo que no supe defender como novela. </span></p>
 </body>
 </html>
