--- a/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_001.xhtml
+++ b/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_001.xhtml
@@ -9,7 +9,7 @@
   <body class="calibre">
 <h1 class="calibre2" id="calibre_pb_0"></h1>
 <p class="calibre2"></p>
-<p class="calibre2"><i>harta de lo de siempre en donde siempre, La Dedicatoria se levantó y contó : contó cuentos de guerra para rafael.carralero; cuentos de amor para haydee.lugo; cuentos de precisión para martín.solares, y fue tan largo su aliento que desbordó renglones, párrafos, capítulos hasta alcanzar el punto final de una novela. Ahí, exhausta, se tendió a descansar contra.portada y se dedicó al fin : </i></p>
+<p class="calibre2"><i>harta de lo de siempre en donde siempre, La Dedicatoria se levantó y contó : contó cuentos de guerra para Rafael Carralero; cuentos de amor para Haydée Lugo; cuentos de precisión para Martín Solares, y fue tan largo su aliento que desbordó renglones, párrafos, capítulos hasta alcanzar el punto final de una novela. Ahí, exhausta, se tendió a descansar contra.portada y se dedicó al fin : </i></p>
 <p class="calibre2"><a href="../Text/musofobia_split_023.xhtml#pag212">A los héroes del batallón literario de la página doscientos doce</p>
 </body>
 </html>
