--- a/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_023.xhtml
+++ b/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_023.xhtml
@@ -7,18 +7,18 @@
 <link href="page_styles.css" type="text/css" rel="stylesheet"/>
 </head>
   <body class="calibre">  
-<p class="calibre2" id="pag212">&lt;<span class="S-T1">página doscientos doce</span>&gt;</p>
+<p class="calibre2" id="pag212">&lt;<i>página doscientos doce</span>&gt;</p>
 <p class="calibre2"></p>
 <p class="calibre2"></p>
 <p class="calibre2">HÉROES DEL BATALLÓN LITERARIO </p>
 <p class="calibre2"></p>
 <p class="calibre2"></p>
-<p class="calibre2"><span class="S-T">acá: </span><span class="S-T7">Miguel Tapia, </span> Marcos Eymar, Oswaldo Zavala, Camilo Bogoya, Ligia Bolívar, Vania Rosas, Lenis San Román, Pedro García de León, Francisco Benavides, Iván Salinas, Lucía Raphael, Citlali Vasconcelos, Ana Xóchitl Ávila, Juan Manuel Rodríguez, David Rinaldessi, Marilyn Baudeneau, Florence Olivier, Aura Estrada. </p>
+<p class="calibre2"><b>acá: </span><i>Miguel Tapia, </span> Marcos Eymar, Oswaldo Zavala, Camilo Bogoya, Ligia Bolívar, Vania Rosas, Lenis San Román, Pedro García de León, Francisco Benavides, Iván Salinas, Lucía Raphael, Citlali Vasconcelos, Ana Xóchitl Ávila, Juan Manuel Rodríguez, David Rinaldessi, Marilyn Baudeneau, Florence Olivier, Aura Estrada. </p>
 <p class="calibre2"></p>
 <p class="calibre2"></p>
-<p class="calibre2"><span class="S-T">allá: </span><span class="S-T7">Cecilia López Ridaura, Joaquín Félix, Ramsés Sandoval, Gládyz Robles, Jaime Fonseca, Félix Luis Viera, Alejandro Escalante, Andŕes Acosta, Guillermina Monroy, Carlos Peredo, Mónica Hidalgo, Javier Quintero, Iván Ayala, Adela Zepeda, Yara Trevethan, Liz Durand, Áurea Madriga, Paula Laverde, Luis Tomás Rubio Castel. </span></p>
+<p class="calibre2"><b>allá: </span><i>Cecilia López Ridaura, Joaquín Félix, Ramsés Sandoval, Gládyz Robles, Jaime Fonseca, Félix Luis Viera, Alejandro Escalante, Andŕes Acosta, Guillermina Monroy, Carlos Peredo, Mónica Hidalgo, Javier Quintero, Iván Ayala, Adela Zepeda, Yara Trevethan, Liz Durand, Áurea Madriga, Paula Laverde, Luis Tomás Rubio Castel. </span></p>
 <p class="calibre2"></p>
-<p class="calibre2"><span class="S-T">doquier: </span><span class="S-T7">Edith Saleil, Alejandro Poblete, David Barreiro, Rodolfo Zolá García Zapata, Carlotita Flores, Ramón Eduardo Núñez, Francisco Osorio, Gerardo Alemán, Manolo Silva, Daniel González, Mario Martínez, Cha.cha.charles, Jesús Reynaga, Ramón Cambeses, Holger Viehmann, Rose Moore, Hisae Ikenaga, Moatasen Alrahabi, Denitsa Daynovska, Brahim Djioua, Gustavo Jiménez Aguirre, Luisa Helen Frey, Andrés Ramírez, Alberto Chimal, José Ramón Ruisánchez, Juan Goytisolo, Rafael Gumucio ;)</span></p>
+<p class="calibre2"><b>doquier: </span><i>Edith Saleil, Alejandro Poblete, David Barreiro, Rodolfo Zolá García Zapata, Carlotita Flores, Ramón Eduardo Núñez, Francisco Osorio, Gerardo Alemán, Manolo Silva, Daniel González, Mario Martínez, Cha.cha.charles, Jesús Reynaga, Ramón Cambeses, Holger Viehmann, Rose Moore, Hisae Ikenaga, Moatasen Alrahabi, Denitsa Daynovska, Brahim Djioua, Gustavo Jiménez Aguirre, Luisa Helen Frey, Andrés Ramírez, Alberto Chimal, José Ramón Ruisánchez, Juan Goytisolo, Rafael Gumucio ;)</span></p>
 <p class="calibre2"></p>
 <p class="calibre2"></p>
 <p class="calibre2"></p>
