--- a/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_000.xhtml
+++ b/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_000.xhtml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="no"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
   "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>Musofobia</title>
@@ -14,7 +13,7 @@
   </style>
 </head>  
 <body class="calibre">
-  <h1 class="calibre1" id="calibre_pb_0">Musofobia</h1>
+  <h1 class="calibre1" id="calibre_pb_0">http://muso.fobia/</h1>
 	<p class="calibre2">&lt&ltversión 2.0 :: <i>open source</i>&gt&gt </p>
   <p class="calibre2">Por Jorge Harmodio</p>
 
