--- a/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_003.xhtml
+++ b/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_003.xhtml
@@ -1,11 +1,17 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version="1.0" encoding="utf-8" standalone="no"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
+  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <title>muso.fobia</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <link href="stylesheet.css" type="text/css" rel="stylesheet"/>
-<link href="page_styles.css" type="text/css" rel="stylesheet"/>
-</head>
+<head>
+  <title>Musofobia</title>
+  <link href="../Styles/stylesheet.css" rel="stylesheet" type="text/css" />
+  <style type="text/css">
+/*<![CDATA[*/
+
+  @page { margin-bottom: 5.000000pt; margin-top: 5.000000pt; }
+  /*]]>*/
+  </style>
+</head> 
   <body class="calibre">
 <p class="calibre2"><b>sábado, nidito.de.amor (21/mar/05/6:30) </b>No es mi imaginación: hay un ratón en la casa. Ayer le pedí a coamante que, si pretende abandonarme, lo mate antes de irse porque yo les tengo fobia. </p>
 <p class="calibre2"><b>sábado, nidito.de.amor (21/mar/05/9:42) </b>Soy tempranero. Suelo despertar a las seis y media de la mañana, preparar té verde y sentarme a escribir. Diariamente escribo una cuartilla de una novela ubicada en el reino de Tailandia, cuyo narrador y personaje principal es una máquina bioelectrónica llamada BALZAC. La novela cuenta un futuro lejano en donde las computadoras no son fabricadas con partes electrónicas, como sucede hoy en día, sino con partes animales: hígados de cerdo, vesículas de perro, intestinos de ratón. Terminada la cuartilla, me dirijo a la cocina a tostar pan, picar fruta y preparar café con leche para que coamante desayune antes de irse a trabajar. Este viaje cotidiano, que despega en la bioelectrónica tailandesa para aterrizar, dos horas después, en la conyugalidad del yogur con fruta, podrá parecerle a usted disparatado. Para mí no lo es. El goteo diario de la rutina lo ha vuelto tan natural, tan necesario, que a veces el desayuno se nos alarga imaginando teléfonos tailandeses con forma de corazón de carnero, que palpitan en vez de hacer <i>ring-ring</i>. / Ayer, blandiendo un cuchillo con mermelada, coamante me sugirió que incluyera zanahorias en el BALZAC. A mí la idea de una bioelectrónica vegetal me pareció completamente absurda. Se lo dije. Ella insistió. El desayuno terminó en pleito. </p>
