--- a/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_006.xhtml
+++ b/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_006.xhtml
@@ -1,11 +1,17 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version="1.0" encoding="utf-8" standalone="no"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
+  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <title>muso.fobia</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <link href="stylesheet.css" type="text/css" rel="stylesheet"/>
-<link href="page_styles.css" type="text/css" rel="stylesheet"/>
-</head>
+<head>
+  <title>Musofobia</title>
+  <link href="../Styles/stylesheet.css" rel="stylesheet" type="text/css" />
+  <style type="text/css">
+/*<![CDATA[*/
+
+  @page { margin-bottom: 5.000000pt; margin-top: 5.000000pt; }
+  /*]]>*/
+  </style>
+</head> 
 <body>
 <p class="calibre2"><b>(domingo, alcoba.matrimonial.sola, 10/abr/05/21:32/ </b>ayer, de madrugada, el giro de su llave dio dos vueltas de amor en la cerradura de mi puerta, como abriendo un paréntesis indebidamente. No era un sueño. Era ella. Venía llorando. El paréntesis duró veinticuatro horas. Pasamos el día juntos, amándonos, confesándonos, reconstruyéndonos... ¿despidiéndonos? Luego, por la tarde, fuimos a Crimée a comer un fó. Fue un día perfecto. Antes de cerrar paréntesis e irse, ella dijo que me amaba, pero que necesitaba esta separación. Después se sumergió en la estación. Yo me quedé ahí, en la boca del metro, sin saber qué hacer con esas dos cosas que me dijo.) </p>
 <p class="calibre2"><b>lunes, alcoba.matrimonial.sola (11/abr/05/7:25)</b> La visita de coamante me dejó tan inspirado que terminé el cuento fotográfico y lo envié a ganar (estoy seguro) el concurso de A.Chimal. La verdad, hoy me siento un tigre para el tango y envidia del cabaret. Todo se va a arreglar. El futuro es maravilloso. </p>
