--- a/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_010.xhtml
+++ b/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_010.xhtml
@@ -1,26 +1,18 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version="1.0" encoding="utf-8" standalone="no"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
+  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <title>muso.fobia</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <link href="stylesheet.css" type="text/css" rel="stylesheet"/>
-<link href="page_styles.css" type="text/css" rel="stylesheet"/>
-</head>
+<head>
+  <title>Musofobia</title>
+  <link href="../Styles/stylesheet.css" rel="stylesheet" type="text/css" />
+  <style type="text/css">
+/*<![CDATA[*/
+
+  @page { margin-bottom: 5.000000pt; margin-top: 5.000000pt; }
+  /*]]>*/
+  </style>
+</head> 
 <body>
-<p class="P-P27"></p>
-<p class="P-P28">                                                                                                          </p>
-<p class="calibre2"></p>
-<p class="calibre2"></p>
-<p class="calibre2"></p>
-<p class="calibre2"></p>
-<p class="calibre2"></p>
-<p class="calibre2"></p>
-<p class="calibre2"></p>
-<p class="calibre2"></p>
-<p class="calibre2"></p>
-<p class="calibre2"></p>
-<p class="calibre2"></p>
-<p class="calibre2"></p>
-<p class="calibre2"><b>sin.lugar, sin.fecha: </span><i>Hoy no puedo escribir ni dormir ni comer ni salir. Hoy sólo puedo llorar como cuento lo que no supe defender como novela. </span></p>
+<p class="calibre2"><b>sin.lugar, sin.fecha: </b>Hoy no puedo escribir ni dormir ni comer ni salir. Hoy sólo puedo llorar como cuento lo que no supe defender como novela.</p>
 </body>
 </html>
