--- a/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_015.xhtml
+++ b/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_015.xhtml
@@ -1,15 +1,19 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version="1.0" encoding="utf-8" standalone="no"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
+  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <title>muso.fobia</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <link href="stylesheet.css" type="text/css" rel="stylesheet"/>
-<link href="page_styles.css" type="text/css" rel="stylesheet"/>
-</head>
+<head>
+  <title>Musofobia</title>
+  <link href="../Styles/stylesheet.css" rel="stylesheet" type="text/css" />
+  <style type="text/css">
+/*<![CDATA[*/
+
+  @page { margin-bottom: 5.000000pt; margin-top: 5.000000pt; }
+  /*]]>*/
+  </style>
+</head> 
 <body>
-<p class="P-P39"></p>
-<p class="P-P39"></p>
-<p class="P-HCuentoCorto">Nombre al agua</p>
+<h1 class="calibre1">Nombre al agua</h1>
 <p class="calibre2">Mi nombre es Narciso y desde niño me ha cagado la madre que me digan Narcisito. Cuando voy caminando por la calle nunca falta un conocido que desde la otra acera me saluda a voz en cuello: ¡qué pasó, Narcisito! Como soy una persona educada, me trago el coraje y respondo de la manera más ecuánime posible. Pasado el saludo, cierro los ojos, respiro hondo y me digo: uno no tiene la culpa del nombre que le pusieron. A mí me bautizaron así en homenaje a un tío que se ahogó en el Grijalva. Como él falleció varios años antes de mi nacimiento, nunca tuve la oportunidad de saber si el nombre le pesaba tanto como a mí. A veces me pregunto si no habrá sido precisamente eso, el peso del nombre, lo que le impidió mantener la cabeza sobre la línea de flotación. Tío Narciso tenía diecinueve años cuando fracasó en su intento por llegar a la otra orilla del río Grijalva. Yo jamás lo hubiera intentado. Hay que ser muy necio para echarse al río con un nombre así. </p>
 <p class="calibre2">Voy a contar cómo se conocieron mis padres. Tío Narciso estudiaba con papá Jacinto en la Escuela Superior de Ingeniería, a la que papá se ha referido siempre como la Esiquie. No recuerdo bien los detalles, pero creo que ambos pretendían estudiar física. Como la carrera ya estaba completa, terminaron inscribiéndose en ingeniería porque las edecanes que promocionaban la Esiquie eran de muy buen ver. En ese tiempo las minifaldas estaban de moda, así que cuando pienso en aquellas edecanes las imagino de minifalda. A tío Narciso lo imagino peinado de lado; no lo puedo imaginar de otra manera: el único retrato que conozco de él es el que está colgado en el comedor de mi casa. Sospecho que se trata de la reproducción aumentada de una foto de identidad. La foto está colgada justo en ese lugar del muro en donde otras familias ponen reproducciones de la Última Cena. Tío Narciso ha sido retratado de hombros para arriba, viste corbata, mira a la cámara muy serio, seguro de sí mismo. No sé de dónde saca tanta seguridad. A mí las fotos de identidad nunca me salen bien porque cuando me siento en el banquillo del fotografiado pienso: a un costado de esta foto va a aparecer mi nombre, y ese pensamiento basta para descomponer mis facciones y salir en la foto precisamente con cara de Narcisito. </p>
 <p class="calibre2">En la Esiquie, papá Jacinto y tío Narciso se volvieron muy amigos y decidieron emprender un viaje al sureste. Habían planeado llegar hasta la península de Yucatán para que tío Narciso conociera las playas del mar Caribe. Mi papá le había contado que el agua de esas playas era la más transparente del planeta. Yo no sé cómo papá Jacinto podía afirmar tal cosa sin haber salido nunca del país, pero lo cierto es que tío Narciso le creyó, probablemente porque él había nacido en un pueblo desértico de la frontera norte y su contacto con el agua se limitaba a inmersiones ocasionales en una laguna salada. Como tenían poco dinero decidieron viajar de aventón. Yo nunca he viajado de aventón, pero intuyo que dos hombres solos al borde de la carretera no deben ser muy atractivos para los automovilistas. Les tomó varias semanas llegar a Villahermosa, en donde el viaje llegó, brutalmente, a su fin. </p>
