--- a/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_021.xhtml
+++ b/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_021.xhtml
@@ -1,11 +1,17 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version="1.0" encoding="utf-8" standalone="no"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
+  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <title>muso.fobia</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <link href="stylesheet.css" type="text/css" rel="stylesheet"/>
-<link href="page_styles.css" type="text/css" rel="stylesheet"/>
-</head>
+<head>
+  <title>Musofobia</title>
+  <link href="../Styles/stylesheet.css" rel="stylesheet" type="text/css" />
+  <style type="text/css">
+/*<![CDATA[*/
+
+  @page { margin-bottom: 5.000000pt; margin-top: 5.000000pt; }
+  /*]]>*/
+  </style>
+</head> 
 <body>
 <p class="P-HCuentoCorto"></p>
 <p class="calibre2">Y Dios creó el blog. Y vio que era bueno. Y creó entonces al monóblogo: engendro emplumado, a medio camino entre carne de psicoanálisis, soliloquio interior y editorialista. Y el monóblogo engulló su vida cotidiana y la escupió entintada en la pantalla: después su voracidad se hartó del día a día y se tragó el mundo que lo rodea: vidas ajenas, opiniones políticas, fotos instantáneas, cartas de amor en clave Morse, mensajes cifrados que el monóblogo enviaba a viejos amores: párrafos con parábola de búmerang que regresaban a impactarse en los campanarios góticos de su ego. Pero un día cualquiera, buscando las aventuras, el monóblogo encontró un cilindro de metal contenedor de una vivencia única, íntima, tan inconfesable que su voracidad se quedó quieta, vertical sin atreverse, inmóvil ante lo incontable: secreto a una voz, vivencia roedora que al abrir la tapadera se echó al cuello del monóblogo para dejarlo con la manzana de Adán temblando de silencio, el gemido atorado y lo inconfesable a punto de confesión. Pero el monóblogo no dijo pío. La sintaxis se hizo nudo. El blog se quedó callado. </p>
