--- a/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_022.xhtml
+++ b/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_022.xhtml
@@ -1,11 +1,17 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version="1.0" encoding="utf-8" standalone="no"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
+  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <title>muso.fobia</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <link href="stylesheet.css" type="text/css" rel="stylesheet"/>
-<link href="page_styles.css" type="text/css" rel="stylesheet"/>
-</head>
+<head>
+  <title>Musofobia</title>
+  <link href="../Styles/stylesheet.css" rel="stylesheet" type="text/css" />
+  <style type="text/css">
+/*<![CDATA[*/
+
+  @page { margin-bottom: 5.000000pt; margin-top: 5.000000pt; }
+  /*]]>*/
+  </style>
+</head> 
 <body>
 <p class="calibre2"><b>sábado, línea.1 (11/jun/05/18:47) </span>Jorge había mentido en la veterinaria esa mañana. La mentira había consistido en convencer al ayudante para que autorizara la salida de Romeo por unas horas, bajo pretexto de que Florence deseaba pasar una última noche con él, sin importar que estuviera sedado. <br />
 –Voy a hacer una excepción por todas esas novelas policiacas que la profesora me presta, pero tráigalo de regreso mañana a primera hora, si el veterinario se entera me mata. <br />
