--- a/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_001.xhtml
+++ b/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_001.xhtml
@@ -1,15 +1,21 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version="1.0" encoding="utf-8" standalone="no"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
+  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <title>muso.fobia</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <link href="stylesheet.css" type="text/css" rel="stylesheet"/>
-<link href="page_styles.css" type="text/css" rel="stylesheet"/>
-</head>
+<head>
+  <title>Musofobia</title>
+  <link href="../Styles/stylesheet.css" rel="stylesheet" type="text/css" />
+  <style type="text/css">
+/*<![CDATA[*/
+
+  @page { margin-bottom: 5.000000pt; margin-top: 5.000000pt; }
+  /*]]>*/
+  </style>
+</head> 
   <body class="calibre">
 <h1 class="calibre2" id="calibre_pb_0"></h1>
 <p class="calibre2"></p>
-<p class="calibre2"><i>harta de lo de siempre en donde siempre, La Dedicatoria se levantó y contó : contó cuentos de guerra para Rafael Carralero; cuentos de amor para Haydée Lugo; cuentos de precisión para Martín Solares, y fue tan largo su aliento que desbordó renglones, párrafos, capítulos hasta alcanzar el punto final de una novela. Ahí, exhausta, se tendió a descansar contra.portada y se dedicó al fin : </i></p>
+<p class="calibre2"><i>Harta de lo de siempre en donde siempre, la Dedicatoria se levantó y contó : cuentos de guerra para Rafael Carralero; cuentos de amor para Haydée Lugo; cuentos de precisión para Martín Solares, y fue tan largo su aliento que desbordó renglones, párrafos, capítulos hasta alcanzar el punto final de una novela. Ahí, exhausta, se tendió a descansar contra.portada y se dedicó al fin : </i></p>
 <p class="calibre2"><a href="../Text/musofobia_split_023.xhtml#pag212">A los héroes del batallón literario de la página doscientos doce</p>
 </body>
 </html>
