--- a/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_003bis.xhtml
+++ b/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_003bis.xhtml
@@ -1,11 +1,17 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version="1.0" encoding="utf-8" standalone="no"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
+  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <title>muso.fobia</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <link href="stylesheet.css" type="text/css" rel="stylesheet"/>
-<link href="page_styles.css" type="text/css" rel="stylesheet"/>
-</head>
+<head>
+  <title>Musofobia</title>
+  <link href="../Styles/stylesheet.css" rel="stylesheet" type="text/css" />
+  <style type="text/css">
+/*<![CDATA[*/
+
+  @page { margin-bottom: 5.000000pt; margin-top: 5.000000pt; }
+  /*]]>*/
+  </style>
+</head> 
   <body class="calibre">
 <h1 class="calibre1">Fractura Doble</h1>
 <p class="calibre2">Presenté a Nadia en el taller y los ojos de todos cayeron como zopilotes sobre su cuerpo, aún a pesar de las muletas, aún a pesar del yeso. Alguien leyó un texto pero casi no lo criticaron, concentrados como estaban en la imaginaria labor de desnudarla. A mí la urgencia me venció y tuve que salir al baño. Cuando regresé ya revoloteaban en torno a ella mojando sus plumas ávidas en el tintero. </p>
