--- a/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_005.xhtml
+++ b/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_005.xhtml
@@ -1,11 +1,17 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version="1.0" encoding="utf-8" standalone="no"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
+  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <title>muso.fobia</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <link href="stylesheet.css" type="text/css" rel="stylesheet"/>
-<link href="page_styles.css" type="text/css" rel="stylesheet"/>
-</head>
+<head>
+  <title>Musofobia</title>
+  <link href="../Styles/stylesheet.css" rel="stylesheet" type="text/css" />
+  <style type="text/css">
+/*<![CDATA[*/
+
+  @page { margin-bottom: 5.000000pt; margin-top: 5.000000pt; }
+  /*]]>*/
+  </style>
+</head> 
 <body class="calibre">
 <h1 class="calibre1">Incendiaria</h1>
 <p class="calibre2">Nadia Teresa se miró al espejo. El lápiz labial delineó el perímetro de su voz narrativa. El frío de dos metáforas pendientes penetró los lóbulos de sus orejas. El tacto del rímel endureció las elipsis de sus ojos. Revisó el contenido de su bolso. Ahí estaba el Quijote. Se lo echó al hombro y salió decidida. Cruzó la aldea. Buscó la casa de don Alonso. Reconoció el corral porque lo había leído. Al centro, un altero de libros. El cura y el barbero preparaban la hoguera. Nadia Teresa sacó su Quijote del bolso y se lo entregó al cura. Queme también este libro, padre. Pero Teresa, si quemamos ese libro vamos a acabar con la literatura. No me importa: sus protagonistas son hombres: ahí las mujeres somos secundarias. El padre y el barbero la miraron. Estaba decidida. El barbero dijo tenemos prisa y echó el libro a la hoguera. El padre no protestó. La hoguera ardió: sus lenguas de fuego consumieron rápidamente la literatura. Al día siguiente, Alonso Quijano recuperó la cordura y renunció a su segunda salida. Cervantes despertó con dolor de cabeza. Se acercó al tintero. Observó su manuscrito. Tachó el título y escribió uno nuevo: Las aventuras de la Ingeniosa Teresa Panza, doncella andante, y de su escudero y marido.</p>
