--- a/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_009.xhtml
+++ b/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_009.xhtml
@@ -1,13 +1,19 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version="1.0" encoding="utf-8" standalone="no"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
+  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <title>muso.fobia</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <link href="stylesheet.css" type="text/css" rel="stylesheet"/>
-<link href="page_styles.css" type="text/css" rel="stylesheet"/>
-</head>
+<head>
+  <title>Musofobia</title>
+  <link href="../Styles/stylesheet.css" rel="stylesheet" type="text/css" />
+  <style type="text/css">
+/*<![CDATA[*/
+
+  @page { margin-bottom: 5.000000pt; margin-top: 5.000000pt; }
+  /*]]>*/
+  </style>
+</head> 
 <body>
-<p class="P-HCuentoCorto">Cuentista de Hamelin</p>
-<p class="calibre2"><i>Érase una vez un cuentista enamorado de una princesa en un reino asolado por los roedores. Los ratones pululaban en los hogares, atacaban al ganado, mordían a los niños, transmitían la rabia. Los súbditos de Hamelin intentaban exterminarlos con gatos, trampas, flautistas, pero los ratones parecían resistirlo todo. Un día, el cuentista pidió una audiencia y le prometió al rey acabar con la epidemia a cambio de la mano de su hija. El monarca aceptó sin dudarlo. El cuentista pasó la noche escribiendo una historia capaz de cautivar a los roedores. A la mañana siguiente, el cuentista recorrió las calles del reino </span>relatando<i> su historia a voz en cuello. Como hipnotizados, los ratones emergían de las casas, las cloacas, los graneros para seguir al cuentista rumbo al acantilado. Embelesados por su relato, los ratones se lanzaron al precipicio. Al mediodía no quedaba un solo roedor vivo en Hamelin. Según lo acordado, el cuentista regresó al castillo a pedir la mano de Nadia de Hamelin, pero inexplicablemente el rey se desdijo de su palabra: no iba a permitir que la princesa se casara con un muerto de hambre. Loco de rabia, el cuentista se recluyó en una cueva en donde, a la luz de una vela, escribió una historia mucho más a amplia, profunda y cautivadora, capaz de fascinar a las mujeres del reino. Una mañana, la voz del cuentista tronó de nuevo por las calles de Hamelin. Las mujeres abandonaron lecho, hogar y trabajo con tal de escucharlo. Sin dejar de contar, el cuentista enfiló hacia el acantilado, seguido por una multitud de mujeres hechizadas. Al llegar al precipicio, el cuentista buscó a la princesa para salvarla. No la encontró. </span><i>Volvió a buscar: Nadia de Hamelin no estaba. ¿Por qué habían sucumbido todas, menos una: precisamente la mujer que amaba? La venganza perdió sentido. El cuentista cortó el hilo de su relato. Roto el encantamiento, las mujeres se dispersaron. El cuentista cerró los ojos, inspiró hondo y se lanzó al vacío preguntando por qué.</span></p>
+<h1 class="calibre1">Cuentista de Hamelin</h1>
+<p class="calibre2">Érase una vez un cuentista enamorado de una princesa en un reino asolado por los roedores. Los ratones pululaban en los hogares, atacaban al ganado, mordían a los niños, transmitían la rabia. Los súbditos de Hamelin intentaban exterminarlos con gatos, trampas, flautistas, pero los ratones parecían resistirlo todo. Un día, el cuentista pidió una audiencia y le prometió al rey acabar con la epidemia a cambio de la mano de su hija. El monarca aceptó sin dudarlo. El cuentista pasó la noche escribiendo una historia capaz de cautivar a los roedores. A la mañana siguiente, el cuentista recorrió las calles del reino relatando su historia a voz en cuello. Como hipnotizados, los ratones emergían de las casas, las cloacas, los graneros para seguir al cuentista rumbo al acantilado. Embelesados por su relato, los ratones se lanzaron al precipicio. Al mediodía no quedaba un solo roedor vivo en Hamelin. Según lo acordado, el cuentista regresó al castillo a pedir la mano de Nadia de Hamelin, pero inexplicablemente el rey se desdijo de su palabra: no iba a permitir que la princesa se casara con un muerto de hambre. Loco de rabia, el cuentista se recluyó en una cueva en donde, a la luz de una vela, escribió una historia mucho más a amplia, profunda y cautivadora, capaz de fascinar a las mujeres del reino. Una mañana, la voz del cuentista tronó de nuevo por las calles de Hamelin. Las mujeres abandonaron lecho, hogar y trabajo con tal de escucharlo. Sin dejar de contar, el cuentista enfiló hacia el acantilado, seguido por una multitud de mujeres hechizadas. Al llegar al precipicio, el cuentista buscó a la princesa para salvarla. No la encontró. Volvió a buscar: Nadia de Hamelin no estaba. ¿Por qué habían sucumbido todas, menos una: precisamente la mujer que amaba? La venganza perdió sentido. El cuentista cortó el hilo de su relato. Roto el encantamiento, las mujeres se dispersaron. El cuentista cerró los ojos, inspiró hondo y se lanzó al vacío preguntando por qué.</p>
 </body>
 </html>
