--- a/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_020.xhtml
+++ b/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_020.xhtml
@@ -1,11 +1,17 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version="1.0" encoding="utf-8" standalone="no"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
+  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <title>muso.fobia</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <link href="stylesheet.css" type="text/css" rel="stylesheet"/>
-<link href="page_styles.css" type="text/css" rel="stylesheet"/>
-</head>
+<head>
+  <title>Musofobia</title>
+  <link href="../Styles/stylesheet.css" rel="stylesheet" type="text/css" />
+  <style type="text/css">
+/*<![CDATA[*/
+
+  @page { margin-bottom: 5.000000pt; margin-top: 5.000000pt; }
+  /*]]>*/
+  </style>
+</head> 
 <body>
 
 <p class="calibre2"><b>jueves, ex.nidito.de.amor (1/jun/05) </span>El cuentista tomó del librero el ejemplar de <i>La venganza de Charles Bovary. </span>Lo abrió. Leyó el final: </p>
