--- a/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_099.xhtml
+++ b/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_099.xhtml
@@ -1,11 +1,17 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version="1.0" encoding="utf-8" standalone="no"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN"
+  "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <title>muso.fobia</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <link href="stylesheet.css" type="text/css" rel="stylesheet"/>
-<link href="page_styles.css" type="text/css" rel="stylesheet"/>
-</head>
+<head>
+  <title>Musofobia</title>
+  <link href="../Styles/stylesheet.css" rel="stylesheet" type="text/css" />
+  <style type="text/css">
+/*<![CDATA[*/
+
+  @page { margin-bottom: 5.000000pt; margin-top: 5.000000pt; }
+  /*]]>*/
+  </style>
+</head> 
   <body class="calibre">
 
 <p class="calibre2"><span class="S-T11">culichi72: </span>Loco, el Iván tiene una bici vieja a la que sólo le fallan los frenos delanteros, ¿quieres que se la pida? ¿Qué onda con la mudanza de mañana, dónde nos vemos?</p>
