--- a/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_023.xhtml
+++ b/epub/new.musofobia.explode/OEBPS/Text/musofobia_split_023.xhtml
@@ -13,21 +13,10 @@
   </style>
 </head> 
   <body class="calibre">  
-<p class="calibre2" id="pag212">&lt;<i>página doscientos doce</span>&gt;</p>
-<p class="calibre2"></p>
-<p class="calibre2"></p>
-<p class="calibre2">HÉROES DEL BATALLÓN LITERARIO </p>
-<p class="calibre2"></p>
-<p class="calibre2"></p>
-<p class="calibre2"><b>acá: </span><i>Miguel Tapia, </span> Marcos Eymar, Oswaldo Zavala, Camilo Bogoya, Ligia Bolívar, Vania Rosas, Lenis San Román, Pedro García de León, Francisco Benavides, Iván Salinas, Lucía Raphael, Citlali Vasconcelos, Ana Xóchitl Ávila, Juan Manuel Rodríguez, David Rinaldessi, Marilyn Baudeneau, Florence Olivier, Aura Estrada. </p>
-<p class="calibre2"></p>
-<p class="calibre2"></p>
-<p class="calibre2"><b>allá: </span><i>Cecilia López Ridaura, Joaquín Félix, Ramsés Sandoval, Gládyz Robles, Jaime Fonseca, Félix Luis Viera, Alejandro Escalante, Andŕes Acosta, Guillermina Monroy, Carlos Peredo, Mónica Hidalgo, Javier Quintero, Iván Ayala, Adela Zepeda, Yara Trevethan, Liz Durand, Áurea Madriga, Paula Laverde, Luis Tomás Rubio Castel. </span></p>
-<p class="calibre2"></p>
-<p class="calibre2"><b>doquier: </span><i>Edith Saleil, Alejandro Poblete, David Barreiro, Rodolfo Zolá García Zapata, Carlotita Flores, Ramón Eduardo Núñez, Francisco Osorio, Gerardo Alemán, Manolo Silva, Daniel González, Mario Martínez, Cha.cha.charles, Jesús Reynaga, Ramón Cambeses, Holger Viehmann, Rose Moore, Hisae Ikenaga, Moatasen Alrahabi, Denitsa Daynovska, Brahim Djioua, Gustavo Jiménez Aguirre, Luisa Helen Frey, Andrés Ramírez, Alberto Chimal, José Ramón Ruisánchez, Juan Goytisolo, Rafael Gumucio ;)</span></p>
-<p class="calibre2"></p>
-<p class="calibre2"></p>
-<p class="calibre2"></p>
-<p class="calibre2"></p>
+<h2 class="calibre2" id="pag212">&lt;&lt;<i>página.doscientos.doce</i>&gt;&gt;</h2>
+<p class="calibre2-enfasis"><b>HÉROES DEL BATALLÓN LITERARIO</b> </p>
+<p class="calibre2-heroes"><i>acá:</i> Miguel Tapia, Marcos Eymar, Oswaldo Zavala, Camilo Bogoya, Ligia Bolívar, Vania Rosas, Lenis San Román, Pedro García de León, Francisco Benavides, Iván Salinas, Lucía Raphael, Citlali Vasconcelos, Ana Xóchitl Ávila, Juan Manuel Rodríguez, David Rinaldessi, Marilyn Baudeneau, Florence Olivier, Aura Estrada. </p>
+<p class="calibre2-heroes"><i>allá:</i> Cecilia López Ridaura, Joaquín Félix, Ramsés Sandoval, Gládyz Robles, Jaime Fonseca, Félix Luis Viera, Alejandro Escalante, Andŕes Acosta, Guillermina Monroy, Carlos Peredo, Mónica Hidalgo, Javier Quintero, Iván Ayala, Adela Zepeda, Yara Trevethan, Liz Durand, Áurea Madrigal, Paula Laverde, Luis Tomás Rubio Castel. </p>
+<p class="calibre2-heroes"><i>doquier:</i> Edith Saleil, Alejandro Poblete, David Barreiro, Rodolfo Zolá García Zapata, Carlotita Flores, Ramón Eduardo Núñez, Francisco Osorio, Gerardo Alemán, Manolo Silva, Daniel González, Mario Martínez, Cha.cha.charles, Jesús Reynaga, Ramón Cambeses, Holger Viehmann, Rose Moore, Hisae Ikenaga, Moatasen Alrahabi, Denitsa Daynovska, Brahim Djioua, Gustavo Jiménez Aguirre, Luisa Helen Frey, Andrés Ramírez, Alberto Chimal, José Ramón Ruisánchez, Juan Goytisolo, Rafael Gumucio ;)</p>
 </body>
 </html>
